--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,7 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  width: 100%;
+  height: 100%;
 }
 
 .App-header {
@@ -19,20 +10,57 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding: 40px;
 }
 
-.App-link {
+form {
+  text-align: center;
+}
+
+input {
+  padding: 12px;
+}
+
+article {
+  width: 80%;
+  overflow-wrap: break-word;
+  margin-top: 2em;
+}
+
+.title {
+  font-size: calc(1em + 1vmin);
+}
+
+.posted {
+  font-size: calc(.5em + 1vmin);
+  line-height: 0;
+}
+
+button {
+  padding: 12px 25px;
+  color: #282c34;
+  font-weight: 600;
+}
+
+.dropdown {
+    display: inline;
+    font-size: calc(3px + 2vmin);
+    font-weight: 600;
+    color: #282c34;
+    box-sizing: border-box;
+    box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
+    border-radius: .5em;
+}
+
+input, button {
+  font-size: calc(10px + 2vmin);
+  border-radius: 8px;
+  border: none;
+  margin-left: 25px;
+}
+
+a {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
